misc:密码重置页

--- a/public/src/template/pages/index.njk
+++ b/public/src/template/pages/index.njk
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>首页</title>
-  <link href="/dist/static/css/core.css?{{webpack.hash}}" rel="stylesheet" type="text/css"/>
-  <link href="/dist/static/css/index.css?{{webpack.hash}}" rel="stylesheet" type="text/css"/>
+  <link href="/dist/css/core.css?${webpack.hash}" rel="stylesheet" type="text/css"/>
+  <link href="/dist/css/index.css?${webpack.hash}" rel="stylesheet" type="text/css"/>
 
   <style>
    
@@ -15,9 +15,9 @@
 <body class="g-doc m-index">
   <div class="g-hd">
   </div>
-  <script type="text/javascript" src="/dist/static/js/vendor.js?{{webpack.hash}}"></script>
-  <script type="text/javascript" src="/dist/static/js/core.js?{{webpack.hash}}"></script>
-  <!-- <script type="text/javascript" src="/dist/static/js/index.js?{{webpack.hash}}"></script> -->
+  <script type="text/javascript" src="/dist/js/vendor.js?${webpack.hash}"></script>
+  <script type="text/javascript" src="/dist/js/core.js?${webpack.hash}"></script>
+  <!-- <script type="text/javascript" src="/dist/js/index.js?${webpack.hash}"></script> -->
 </body>
 </html>
 
