--- a/public/src/template/pages/resetPassword.njk
+++ b/public/src/template/pages/resetPassword.njk
@@ -1,34 +1,24 @@
-<@compress>
-<#escape x as x?html>
-<#include "../common/macro.ftl">
+{% import "../common/macro.njk" as mco %}
 <!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
   <title>用户注册</title>
-  <link href="/dist/static/css/core.css?{{webpack.hash}}" rel="stylesheet" type="text/css"/>
-  <link href="/dist/static/css/resetPassword.css?{{webpack.hash}}" rel="stylesheet" type="text/css"/>
-  <@browserCheck />
+  <link href="/dist/css/core.css?${webpack.hash}" rel="stylesheet" type="text/css"/>
+  <link href="/dist/css/resetPassword.css?${webpack.hash}" rel="stylesheet" type="text/css"/>
 </head>
 <body class="g-doc">
 	<div class="g-hd">
-      <@topbar />
+        {{mco.topbar()}}
   </div>
   <div class="g-bd">
     <div id="app"></div>
   </div>
 	<div class="g-ft">
-		<@footer />
+		 {{mco.footer()}}
 	</div>
-  <#noescape>
-    <script>
-    
-    </script>
-  </#noescape>
-  <script type="text/javascript" src="/dist/static/js/vendor.js?{{webpack.hash}}"></script>
-  <script type="text/javascript" src="/dist/static/js/core.js?{{webpack.hash}}"></script>
-  <script type="text/javascript" src="/dist/static/js/resetPassword.js?{{webpack.hash}}"></script>
+  <script type="text/javascript" src="/dist/js/vendor.js?${webpack.hash}"></script>
+  <script type="text/javascript" src="/dist/js/core.js?${webpack.hash}"></script>
+  <script type="text/javascript" src="/dist/js/resetPassword.js?${webpack.hash}"></script>
 </body>
 </html>
-</#escape>
-</@compress>
