--- a/public/src/template/pages/error/400.njk
+++ b/public/src/template/pages/error/400.njk
@@ -14,6 +14,7 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: 700px;
+      margin-bottom:30px;
     }
     .m-error .backbtn {
       color: #fff;
@@ -21,6 +22,7 @@
       border-radius: 3px;
       background-color: #45b0f5;
       padding: 10px 30px;
+      display:inline-block;
     }
   </style>
 </head>
